# pine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
lab1/Zad1/: main.cpp  shader_stuff.h
lab1/Zad2/: fragment.glsl  main.cpp
lab1/Zad3/: main.cpp  vertex.glsl
lab1/Zad4/: fragment_green.glsl  fragment_red.glsl  main.cpp
lab1/Zad5/: main.cpp
lab1/Zad6/: fragment.glsl  fragment_border.glsl  main.cpp  vertex.glsl  vertex_border.glsl
lab2/: README.md
lab2/Zad1/: fragment.glsl  main.cpp  vertex.glsl
lab2/Zad2/: Makefile  fragment_color.glsl  fragment_grey.glsl  main.cpp  vertex_grey.glsl
lab2/Zad3/: fragment.glsl  house.h  vertex.glsl
lab2/Zad4/: fragment.glsl  main.cpp  vertex.glsl  vertex_border.glsl
lab4/: CMakeLists.txt  README.md
lab4/Zad1/: CMakeLists.txt  main.cpp  obj_loader.hpp  shader_stuff.h  video.mkv
lab4/Zad2/: CMakeLists.txt  main.cpp  video.mkv
lab5/: CMakeLists.txt  README.md
lab5/Zad1/: CMakeLists.txt  main.cpp  utilities.hpp
lab5/Zad1/shaders/: fragment.glsl
lab5/Zad2/: main.cpp  mesh.cpp  mesh.hpp  obj_loader.hpp  pipeline.hpp  utilities.hpp
lab5/Zad3/: fragment.glsl  (+3 more)
lab6/: README.md  video.mkv
project/: CMakeLists.txt  README.md
project/src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  scene.cpp  scene.hpp
project/src/chess/: CMakeLists.txt  chess.cpp  chess.hpp  direction.hpp  location.cpp  location.hpp  move.cpp  move.hpp  piece.cpp  piece.hpp
project/src/engine/: CMakeLists.txt  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  shadow.cpp  shadow.hpp  texture.cpp  texture.hpp
shaders/: color.fs  color.vs  default.fs  default.vs  skybox.fs  skybox.vs
src/: CMakeLists.txt  README.md  main.cpp  scene.cpp  scene.hpp
(+72 files in other folders)
